test/bad/or_elim_badhypr.pa
lemma bad : 0 = 0 {
    0 = 0 by eq_intro;
    0 = 0 | 0 = S(0) by or_intro_l 0;
    given 0 = 0 {
        0 = 0 by renaming 2;
    }
    given 0 = 0 {
        0 = 0 by eq_intro;
    }
    0 = 0 by or_elim 1 4 7;
}
